--- a/templates/crudbuilder/instance/list.html
+++ b/templates/crudbuilder/instance/list.html
@@ -32,6 +32,7 @@
 				</form>
 			</div>
 
+			{{ app_label }} - {{ custom_postfix_url }}
 
 			{% render_table table_objects "crudbuilder/widgets/tables/tables.html" %}
 		</div>
